# narrative-credibility-index

./: .gitignore  Cargo.toml  README.md
example/: article.md  news.md
src/: ai_agent.rs  main.rs  rubric.rs  score.rs  server.rs  tui.rs
