[package]
name = "nci"
version = "0.1.0"
edition = "2021"
description = "Narrative Credibility Index CLI — AI-assisted PSYOP detection tool"
license = "MIT"

[[bin]]
name = "nci"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
colored = "2"
