[package]
name = "nci"
version = "0.1.0"
edition = "2021"
description = "Narrative Credibility Index CLI — AI-assisted PSYOP detection tool"
license = "MIT"

[[bin]]
name = "nci"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
colored = "2.1"
